# internal/presentation/http/ginapp/dto/requests.go
@@ -25,3 +25,9 @@ type UpdateInfoRequest struct {
 	Role     *int    `json:"role"`
 	IsActive *bool   `json:"is_active"`
 }
+
+type CreateUserRequest struct {
+	Username string `json:"username" binding:"required"`
+	Email    string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
